无数辛苦,终于换了一个主题

--- a/themes/shoka/_config.yml
+++ b/themes/shoka/_config.yml
@@ -1,6 +1,9 @@
 # Alternate site name
-alternate: Yume Shoka
-
+alternate: xxxxxxxb's blog
+math:
+  enable: true
+  per_page: true
+  engine: mathjax
 open_graph:
   #twitter_id:
   #google_plus:
@@ -105,14 +108,14 @@ menu:
 # Value before `||` delimiter is the target permalink,
 # secend value is the name of Font icon.
 social:
-  #github: https://github.com/yourname || github || "#191717"
+  github: https://github.com/xxxxxxxb || github || "#191717"
   #google: https://plus.google.com/yourname || google
   #twitter: https://twitter.com/yourname || twitter || "#00aff0"
   #zhihu: https://www.zhihu.com/people/yourname || zhihu || "#1e88e5"
   #music: https://music.163.com/#/user/home?id=yourid || cloud-music || "#e60026"
   #weibo: https://weibo.com/yourname || weibo || "#ea716e"
   #about: https://about.me/yourname || address-card || "#3b5998"
-  #email: mailto:yourname@mail.com || envelope || "#55acd5"
+  email: 914401776@qq.com || envelope || "#55acd5"
   #facebook: https://www.facebook.com/yourname || facebook
   #stackoverflow: https://stackoverflow.com/yourname || stack-overflow
   #youtube: https://youtube.com/yourname || youtube
