--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^2.0.0",
+    "hexo-renderer-markdown-it-katex": "^3.4.4",
+    "hexo-renderer-mathjax": "^0.6.0",
     "hexo-renderer-multi-markdown-it": "^0.1.5",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
